# IKPLS

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  plot_timings.py  pyproject.toml  requirements.txt  time_pls.py
.github/actions/publish/: action.yml
.github/actions/release/: action.yml
.github/actions/test/: action.yml
.github/workflows/: draft-pdf.yml  package_workflow.yml  pull_request.yml  pull_request_package_workflow.yml  pull_request_test_workflow.yml  python-package.yml  test_workflow.yml  workflow.yml
Algorithms/: jax_improved_kernel_1.py  jax_improved_kernel_2.py
algorithms/: __init__.py  jax_ikpls_alg_1.py  jax_ikpls_alg_2.py  jax_ikpls_base.py  numpy_ikpls.py
algorithms/tests/: __init__.py  test_jax_ikpls_alg_1.py  test_jax_ikpls_alg_2.py  test_numpy_ikpls.py
docs/: CONTRIBUTING.md  CONTRIBUTING.rst  README.md  api.rst  conf.py  contributing.rst  index.rst  requirements.txt
docs/source/: api.rst  conf.py  ikpls.rst  index.rst  jax_ikpls_alg_1.rst  jax_ikpls_alg_2.rst  jax_ikpls_base.rst  numpy_ikpls.rst
docs/source/fast_cross_validation/: numpy_ikpls.rst
examples/: __init__.py  cross_val_jax.py  cross_val_numpy.py  fast_cross_val_numpy.py  fit_predict_jax.py  fit_predict_numpy.py  gradient_jax.py
ikpls/: __init__.py  jax_ikpls_alg_1.py  jax_ikpls_alg_2.py  jax_ikpls_base.py  numpy_ikpls.py
ikpls/fast_cross_validation/: numpy_ikpls.py
junit/: test-results.xml
paper/: README.md  paper.bib  paper.md  plot_timings.py  reproducing-results-notebook.py  time_pls.py
paper/timings/: timings.csv  timings.py
tests/: __init__.py  load_data.py  test_consistency.py  test_ikpls.py
timings/: __init__.py  command.sh  timings.csv  timings.py
