[tool.poetry]
name = "ikpls"
version = "1.0.1"
description = ""
authors = ["Sm00thix <oleemail@icloud.com>"]
maintainers = ["Sm00thix <oleemail@icloud.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://ikpls.readthedocs.io/en/latest/"
repository = "https://github.com/Sm00thix/IKPLS"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.26.1"
jax = "^0.4.19"
jaxlib = "^0.4.19"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
joblib = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"