[tool.poetry]
name = "ikpls"
version = "1.2.4"
description = "Improved Kernel PLS and Fast Cross-Validation."
authors = ["Sm00thix <oleemail@icloud.com>"]
maintainers = ["Sm00thix <oleemail@icloud.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://ikpls.readthedocs.io/en/latest/"
repository = "https://github.com/Sm00thix/IKPLS"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.26.3"
jax = "^0.4.20"
jaxlib = "^0.4.20"
scikit-learn = "^1.5.0"
tqdm = "^4.66.1"
joblib = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"