[tool.poetry]
name = "ikpls"
version = "1.2.5.post3"
description = "Improved Kernel PLS and Fast Cross-Validation."
authors = ["sm00thix <oleemail@icloud.com>"]
maintainers = ["sm00thix <oleemail@icloud.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://ikpls.readthedocs.io/en/latest/"
repository = "https://github.com/sm00thix/ikpls"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
numpy = ">=1.26.3"
jax = ">=0.5.0"
jaxlib = ">=0.5.0"
scikit-learn = ">=1.5.0"
tqdm = ">=4.66.1"
joblib = ">=1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"